// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Email Templates > Staff Invitation Email > should match snapshot for HTML template 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Staff Invitation - OSLSR</title>
</head>
<body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; max-width: 600px; margin: 0 auto; padding: 20px;">
  <div style="background-color: #9C1E23; padding: 20px; text-align: center; border-radius: 8px 8px 0 0;">
    <h1 style="color: white; margin: 0;">OSLSR</h1>
    <p style="color: #f0f0f0; margin: 5px 0 0 0;">Oyo State Labour & Skills Registry</p>
  </div>

  <div style="padding: 30px; background-color: #f9f9f9; border-radius: 0 0 8px 8px;">
    <h2 style="color: #333; margin-top: 0;">You've Been Invited!</h2>

    <p>Hello Adewale Johnson,</p>

    <p>You have been invited to join the Oyo State Labour & Skills Registry as a staff member.</p>

    <div style="background-color: #fff; padding: 15px; border-radius: 5px; border-left: 4px solid #9C1E23; margin: 20px 0;">
      <p style="margin: 10px 0;"><strong>Role:</strong> Enumerator</p>
      <p style="margin: 10px 0;"><strong>LGA Assignment:</strong> Ibadan North</p>
    </div>

    <p>Click the button below to activate your account and complete your profile setup:</p>

    <div style="text-align: center; margin: 30px 0;">
      <a href="http://localhost:5173/staff/activate/test-token-123" style="background-color: #9C1E23; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block; font-weight: bold;">Activate Your Account</a>
    </div>

    <p style="color: #666; font-size: 14px;">This invitation link will expire in 24 hours.</p>

    <p style="color: #666; font-size: 14px;">If the button doesn't work, copy and paste this link into your browser:</p>
    <p style="word-break: break-all; color: #9C1E23; font-size: 14px;">http://localhost:5173/staff/activate/test-token-123</p>

    <hr style="border: none; border-top: 1px solid #ddd; margin: 30px 0;">

    <p style="color: #999; font-size: 12px;">
      <strong>Need help?</strong> Contact support at <a href="https://oyotradeministry.com.ng" style="color: #9C1E23;">https://oyotradeministry.com.ng</a>
    </p>

    <p style="color: #999; font-size: 12px; text-align: center;">
      This email was sent by the Oyo State Labour & Skills Registry.<br>
      &copy; 2026 Government of Oyo State. All rights reserved.
    </p>
  </div>
</body>
</html>"
`;

exports[`Email Templates > Staff Invitation Email > should match snapshot for plain text template 1`] = `
"You've Been Invited to Join OSLSR - Enumerator

Hello Adewale Johnson,

You have been invited to join the Oyo State Labour & Skills Registry as a staff member.

Role: Enumerator
LGA Assignment: Ibadan North

Click the link below to activate your account and complete your profile setup:
http://localhost:5173/staff/activate/test-token-123

This invitation link will expire in 24 hours.

Need help? Contact support at https://oyotradeministry.com.ng

---
Oyo State Labour & Skills Registry
Government of Oyo State"
`;

exports[`Email Templates > Verification Email (Hybrid Magic Link + OTP) > should match snapshot for verification HTML 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Verify Your Email - OSLSR</title>
</head>
<body style="font-family: Arial, sans-serif; line-height: 1.6; color: #333; max-width: 600px; margin: 0 auto; padding: 20px;">
  <div style="background-color: #9C1E23; padding: 20px; text-align: center; border-radius: 8px 8px 0 0;">
    <h1 style="color: white; margin: 0;">OSLSR</h1>
    <p style="color: #f0f0f0; margin: 5px 0 0 0;">Oyo State Labour & Skills Registry</p>
  </div>

  <div style="padding: 30px; background-color: #f9f9f9; border-radius: 0 0 8px 8px;">
    <h2 style="color: #333; margin-top: 0;">Welcome to OSLSR!</h2>

    <p>Hello Chinedu Okafor,</p>

    <p>Thank you for registering with the Oyo State Labour & Skills Registry. Please verify your email address to complete your registration.</p>

    <p><strong>Click the link OR enter the code below:</strong></p>

    <div style="text-align: center; margin: 30px 0;">
      <a href="http://localhost:5173/verify-email/test-token-456" style="background-color: #9C1E23; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block; font-weight: bold;">Verify Email Address</a>
    </div>

    <div style="text-align: center; margin: 30px 0; padding: 20px; background-color: #fff; border-radius: 8px; border: 2px dashed #ddd;">
      <p style="margin: 0 0 10px 0; color: #666; font-size: 14px;">Or enter this code:</p>
      <p style="font-size: 32px; letter-spacing: 8px; font-weight: bold; color: #9C1E23; margin: 0; font-family: monospace;">847592</p>
      <p style="margin: 10px 0 0 0; color: #999; font-size: 12px;">Code expires in 10 minutes</p>
    </div>

    <p style="color: #666; font-size: 14px;">The verification link expires in 24 hour(s). If you didn't create an account with OSLSR, you can safely ignore this email.</p>

    <p style="color: #666; font-size: 14px;">If the button doesn't work, copy and paste this link into your browser:</p>
    <p style="word-break: break-all; color: #9C1E23; font-size: 14px;">http://localhost:5173/verify-email/test-token-456</p>

    <hr style="border: none; border-top: 1px solid #ddd; margin: 30px 0;">

    <p style="color: #999; font-size: 12px; text-align: center;">
      This email was sent by the Oyo State Labour & Skills Registry.<br>
      &copy; 2026 Government of Oyo State. All rights reserved.
    </p>
  </div>
</body>
</html>"
`;
